--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,13 @@
   --text-white: #ffffff;
   --text-footer: rgba(255, 255, 255, 0.6);
   --accent-color: #2196F3;
+  --border-color: rgba(33, 33, 33, 0.2);
 
   --cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container {
+
   /* outline: 2px solid tomato; */
   width: 1200px;
   margin: 0px auto;
@@ -174,8 +176,9 @@ button.white {
   left: 0px;
   visibility: visible;
   z-index: 3;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+
+  height: 100vh;
   background: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms var(--cubic), visibility 250ms var(--cubic);
 }
@@ -202,9 +205,61 @@ button.white {
 
   transform: translate(-50%, -50%) scale(1);
   opacity: 1;
-
   transition: opacity 250ms var(--cubic), 
     transform 250ms var(--cubic);
+}
+
+.modal-title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--text-title);
+  margin: 0 0 12px 0;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 40px;
+}
+
+.form-label {
+  width: 100%;
+}
+
+.label-name {
+  display: flex;
+  padding: 0;
+  margin: 0 0 4px 0;
+  
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: var(--text-main);
+}
+
+.form-input {
+  height: 40px;
+  width: 100%;
+  padding: 0;
+  margin-bottom: 10px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.form-textarea {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
 }
 
 .close {
@@ -217,6 +272,12 @@ button.white {
   border-radius: 50%;
 }
 
+.submit-button {
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  
+}
 
 /* Особенности */
 
