--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ header {
   display: block;
   width: 100%;
   height: 4px;
-  bottom: -1px;
+  bottom: -2px;
 
   background-color: var(--accent-color);
   border-radius: 2px;
@@ -209,30 +209,32 @@ button.white {
     transform 250ms var(--cubic);
 }
 
-.modal-title {
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  color: var(--text-title);
-  margin: 0 0 12px 0;
-}
-
-.modal-form {
+.form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 40px;
 }
 
+.form-title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--text-title);
+  margin: 0 auto 12px;
+}
+
 .form-label {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
+  padding: 0;
+  margin-bottom: 10px;
 }
 
 .label-name {
-  display: flex;
-  padding: 0;
-  margin: 0 0 4px 0;
+  margin-bottom: 4px;
   
   font-weight: normal;
   font-size: 12px;
@@ -246,21 +248,128 @@ button.white {
   height: 40px;
   width: 100%;
   padding: 0;
-  margin-bottom: 10px;
+  padding-left: 42px;
 
-  border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+
+  transition: border 250ms var(--cubic);
+}
+
+.form-input:hover,
+.form-input:focus {
+  border: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.input-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+
+  transition: fill 250ms var(--cubic);
+}
+
+.form-label:hover .input-icon,
+.form-label:focus .input-icon,
+.form-label:active .input-icon {
+  fill: var(--accent-color);
 }
 
 .form-textarea {
   resize: none;
   width: 100%;
   height: 120px;
+  padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
+
+  outline: none;
 }
+
+.form-textarea:hover,
+.form-textarea:focus {
+  border: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.form textarea::placeholder {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.label-check {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  margin-top: 10px;
+
+  color: var(--text-main);
+}
+
+.check-input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
+.check-box {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  margin-right: 7px;
+  width: 16px;
+  height: 15px;
+
+  border: 3px solid var(--text-title);
+  border-radius: 2px;
+}
+
+.check-icon {
+  position: absolute;
+  top: ;
+  left: 0;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  opacity: 0;
+
+  transition: opacity 250ms var(--cubic);
+}
+
+.check-input:checked + .check-icon {
+  opacity: 1;
+}
+
+.conditions {
+  text-decoration: underline;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: var(--accent-color);
+}
+
 
 .close {
   position: absolute;
@@ -269,14 +378,38 @@ button.white {
   width: 30px;
   height: 30px;
   padding: 0;
+  margin: 0;
+
   border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--text-white);
+  transition: fill 250ms var(--cubic);
+}
+
+.close:focus,
+.close:hover {
+  fill: var(--accent-color);
 }
 
 .submit-button {
   width: 200px;
   height: 50px;
-  margin: 0 auto;
-  
+  margin: auto;
+  margin-top: 30px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  color: var(--text-white);
+  background-color: var(--accent-color);
+
+  transition: background-color 250ms var(--cubic);
+}
+
+.submit-button:hover,
+.submit-button:focus {
+  background-color: #188CE8;
 }
 
 /* Особенности */
@@ -602,8 +735,6 @@ a.down-contacts {
   margin: 0px;
   max-height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-
-;
 
   transform: translateY(100%);
   transition: transform 250ms var(--cubic);
