--- a/styles.css
+++ b/styles.css
@@ -403,6 +403,7 @@ button.white {
 
   color: var(--text-white);
   background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   transition: background-color 250ms var(--cubic);
 }
@@ -601,9 +602,10 @@ a.down-contacts {
   padding-top: 60px;
   padding-bottom: 60px;
   align-items: baseline;
+  justify-content: space-between;
 }
 
-.join h3 {
+.join-us {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -613,18 +615,71 @@ a.down-contacts {
   color: var(--text-white);
 }
 
-.join {
+/* .join {
   margin-left: 70px;
-}
+} */
 
-.join .social-media {
+
+.join-media {
+  display: flex;
   margin: 0;
   margin-top: 20px;
+}
+
+.join-media li + li {
+  margin-left: 10px;
 }
 
 .join .media-area {
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--text-white)
+}
+
+.subscribe-form {
+  display: flex;
+}
+
+.subscribe-label {
+  padding: 0;
+  margin: 0;
+}
+
+.subscribe-input {
+  box-sizing: border-box;
+  width: 358px;
+  height: 50px;
+  margin-top: 10px;
+  padding-left: 16px;
+  background-color: #2F303A;
+  color: var(--text-footer);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+
+.subscribe-input::placeholder {
+  color: var(--text-footer);
+}
+
+.subscribe-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  margin-top: 10px;
+
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+
+  color: var(--text-white);
+  background-color: var(--accent-color);
+}
+
+.subscribe-icon {
+  margin-left: 10px;
 }
 
 /* PORTFOLIO */
